add redux and currency list

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,5 +4,6 @@ $grey-xlight: #C4C4C4;
 $blue: #0A146E;
 $blue-light: #0071EB;
 $blue-xlight: #2697ff;
+$blue-hover: #cee5fa;
 $white: #ffffff;
 $black: #000000;
