--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -7,7 +7,15 @@
     border-radius: 10px;
     width: 70%;
 
-    h2 {
+    h2,
+    h4 {
+        margin: 0;
+    }
+
+    .exchangeTitle {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         margin: 20px 30px;
         margin-bottom: 0;
     }
@@ -29,10 +37,6 @@
                 flex-direction: column;
                 flex-grow: 1;
                 gap: 8px;
-
-                h4 {
-                    margin: 0;
-                }
             }
         }
 
@@ -42,7 +46,6 @@
             }
 
             h2 {
-                margin: 0;
                 margin-top: 10px;
             }
         }
